# sudoku-solver

./: CMakeLists.txt
cli/: CMakeLists.txt
cli/src/: sudoku.c
grids/: hard.txt
solver/: CMakeLists.txt
solver/include/: solver.h
solver/src/: solver.c
