# Optional debug output
OPTION(DEBUG_SOLVER "Debug output from the solver" OFF)
IF(DEBUG_SOLVER)
    ADD_DEFINITIONS(-DDEBUG_SOLVER)
ENDIF()

# Build the library
SET(SOLVER_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include" CACHE INTERNAL "solver include directories")
INCLUDE_DIRECTORIES("${SOLVER_INCLUDE_DIR}")
ADD_LIBRARY(solver STATIC src/solver.c)
SET_TARGET_PROPERTIES(
    solver PROPERTIES
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}"
    LIBRARY_OUTPUT_DIRECTORY_DEBUG "${CMAKE_CURRENT_BINARY_DIR}"
    LIBRARY_OUTPUT_DIRECTORY_RELEASE "${CMAKE_CURRENT_BINARY_DIR}"
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}"
    RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_CURRENT_BINARY_DIR}"
    RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_CURRENT_BINARY_DIR}")
